overlaping fix

--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -31,3 +31,18 @@
     gap: 1rem;
     margin-bottom: 1rem;
 }
+
+@media screen and (max-width: 1024px){
+   .portfolio_container {
+        grid-template-columns: 1fr 1fr;
+        gap: 1.2rem; 
+   }
+ }
+ 
+ @media screen and (max-width: 600px){
+    .portfolio_container {
+        grid-template-columns: 1fr 1fr;
+        margin: auto;
+        gap: 1rem;
+    }
+ }
